--- a/public/liste.html
+++ b/public/liste.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
     
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://codepb.github.io/jquery-template/jquery.loadTemplate-0.4.3.js" type="text/javascript" charset="utf-8"></script>
 </head>
@@ -30,6 +31,10 @@
                 <a class="button" href="add.html">Ajouter un client</a>
                 <a class="button" href="graphic.html">Statistiques</a>
             </div>
+
+            <div id="data"></div>
+            <div id="pagination"></div>
+            
             <div>
                 <table>
                     <thead>
@@ -47,11 +52,12 @@
                     <tbody id="myTable">
                     </tbody>
                 </table>
-
             </div>
         </div>
-        <script src="index.js"></script>
+
     </section>
 </body>
+
+<script src="index.js"></script>
 
 </html>
