--- a/public/suppr.html
+++ b/public/suppr.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Projet Front">
     <meta name="author" content="Ines Mazouz">
-    <title>Liste des clients</title>
+    <title>Modification</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -25,8 +25,9 @@
     
     <section>
         <div>
-            <h1>MODIFICATION D'UN CLIENT EXISTANT</h1>
+            <h1>SUPPRESSION D'UN CLIENT EXISTANT</h1>
             <div id = "Ajout">
+                <h2 style="color: red;">ATTENTION : Vous allez supprimer un utilisateur !</h2>
                 <a class="button2" href="liste.html">Retour à la liste</a>
                 <a class="button2" href="add.html">Ajouter un client</a>
             </div>
@@ -62,8 +63,8 @@
                     
                 <br>
                 <div>
-                    <input class="button2" type="submit" value="modifier" name="changement"/>
-                    <input class="button2" type="reset" value="réinitialiser" name="Réinitialiser" />
+                    <!--<input class="button2" type="submit" value="modifier" name="changement"/>
+                    <input class="button2" type="reset" value="Réinitialiser" name="Réinitialiser" />-->
                     <input class="button2" type="submit" value="supprimer" name="changement" />
                 </div>
             </fieldset>
