--- a/public/graphic_country.html
+++ b/public/graphic_country.html
@@ -95,15 +95,15 @@
             data: {
                 labels: pays,
                 datasets: [{
-                    label: "Nombre de fois que le pays est sélectionné",
+                    label: "Nombre d'occurence du pays",
                     data: counter,
                     backgroundColor:
-                        '#e1e0db'
+                        '#847979'
                     ,
                     borderColor:
-                        '#423d3d'
+                        '#ffffff'
                     ,
-                    borderWidth: 1
+                    borderWidth: 0.5
                 }]
             },
             options: {
