--- a/public/graphic_company.html
+++ b/public/graphic_company.html
@@ -95,15 +95,15 @@
             data: {
                 labels: entreprise,
                 datasets: [{
-                    label: "Nombre de fois que le entreprise est sélectionné",
+                    label: "Nombre d'occurence de l'entreprise",
                     data: counter,
                     backgroundColor:
-                        '#e1e0db'
+                        '#847979'
                     ,
                     borderColor:
-                        '#423d3d'
+                        '#ffffff'
                     ,
-                    borderWidth: 1
+                    borderWidth: 0.5
                 }]
             },
             options: {
