--- a/public/graphic_company.html
+++ b/public/graphic_company.html
@@ -23,7 +23,7 @@
 
         body {
             text-align: center;
-            color: green;
+            color: rgb(0, 0, 0);
             font-family: 'Days One', sans-serif;
         }
 
