--- a/frontend/public/liste.html
+++ b/frontend/public/liste.html
@@ -10,7 +10,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/style2.css" rel="stylesheet">
-    <title>Listes des clients</title>
+    
+    <title>Liste</title>
+    <link rel="shortcut icon" href="images/users.jpg" />
 </head>
 
 <body>
@@ -39,7 +41,7 @@
                             <th scope="col" class="Entete">Société</th>
                             <th scope="col" class="Entete">Pays</th>
                             <th scope="col" class="Entete">Email</th>
-                            <th scope="col" class="Entete">Création</th>
+                            <th scope="col" class="Entete">Date de création</th>
                             <th scope="col" class="Entete"></th>
                             <th scope="col" class="Entete" name="bouton" value="supprimer"></th>
                         </tr>
