--- a/frontend/public/graphic_company.html
+++ b/frontend/public/graphic_company.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Projet Front">
     <meta name="author" content="Ines Mazouz">
     <title>Statistiques</title>
+    <link rel="shortcut icon" href="images/users.jpg" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 
