--- a/frontend/public/modif.html
+++ b/frontend/public/modif.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Projet Front">
     <meta name="author" content="Ines Mazouz">
-    <title>Liste des clients</title>
+    <title>Modification</title>
+    <link rel="shortcut icon" href="images/users.jpg" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
