--- a/frontend/public/graphic.html
+++ b/frontend/public/graphic.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Projet Front">
     <meta name="author" content="Ines Mazouz">
-    <title>Statistiques</title>
+    <title>Statistique</title>
     <link rel="shortcut icon" href="images/users.jpg" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
